# sgc

./: CMakeLists.txt  README.md
src/: config.h  config.h.in  main.c  sgc.c  sgc.h  sgc_allocator.c  sgc_allocator.h  sgc_area_heap.c  sgc_area_heap.h  sgc_atom_heap.c  sgc_atom_heap.h  sgc_dlist.c  sgc_dlist.h  sgc_fifo.h  sgc_interval.c  sgc_interval.h  sgc_lifo.h  sgc_lifo.h.lockfree  sgc_list.c  sgc_list.h  sgc_log.c  sgc_log.h  sgc_mem_heap.c  sgc_mem_heap.h  sgc_mess.c  sgc_mess.h  sgc_priv.h  sgc_sys.h  sgc_thread.c  sgc_thread.h  sgc_trace.c  sgc_types.h  sgc_var_heap.c  sgc_var_heap.h
